# istyle-verilog-formatter

./: .gitattributes  .gitignore  ASBeautifier.cpp  ASFormatter.cpp  ASResource.cpp  CMakeLists.txt  README.md  astyle.h  iStyle.html  makefile
.github/workflows/: push.yml
res/: commands.txt  test.v
src/: astyle.h  astyle_main.cpp
src/astyle/: ASBeautifier.cpp  ASFormatter.cpp  ASResource.cpp  ASStreamIterator.cpp
